<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

 <Button
     android:layout_width="match_parent"
     android:layout_height="0dp"
     android:layout_weight="1"
     android:textColor="#fff"
     android:textSize="25sp"
     android:background="@drawable/roundbutton1"
     android:layout_margin="10dp"
     android:onClick="homebtn1"
     android:text="@string/home1">

 </Button>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/roundbutton2"
        android:textColor="#fff"
        android:textSize="25sp"
        android:onClick="homebtn2"
        android:layout_margin="10dp"
        android:text="@string/home2">

    </Button>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="homebtn3"
        android:background="@drawable/roundbutton3"
        android:textColor="#fff"
        android:textSize="25sp"
        android:layout_margin="10dp"
        android:text="@string/home3">

    </Button>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:textColor="#fff"
        android:textSize="25sp"
        android:onClick="homebtn4"
        android:background="@drawable/roundbutton4"
        android:text="@string/home4">

    </Button>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/roundbutton5"
        android:textColor="#fff"
        android:onClick="homebtn5"
        android:textSize="25sp"
        android:layout_margin="10dp"
        android:text="@string/home5">

    </Button>


</LinearLayout>